Add heading to index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Odin's Chicken-fried Recipes Homepage</title>
 </head>
 <body>
-    
+    <h1>Odin's Chicken-fried Recipes</h1>
 </body>
 </html>
