--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Odin's Chicken-fried Recipes</h1>
+    <ul>
+        <li><a href="recipes/chickenfried-steak.html">Chicken-fried Steak</a></li>
+    </ul>
 </body>
 </html>
