Add heading to chicken-fried steak page

--- a/recipes/chickenfried-steak.html
+++ b/recipes/chickenfried-steak.html
@@ -5,6 +5,6 @@
         <title>Chicken-fried Steak Recipe</title>
     </head>
     <body>
-        
+        <h1>Chicken-fried Steak</h1>
     </body>
 </html>
