Add image to chicken-fried steak page

--- a/recipes/chickenfried-steak.html
+++ b/recipes/chickenfried-steak.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Chicken-fried Steak</h1>
+        <img src="images/chicken-fried-steak.jpg">
     </body>
 </html>
