--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin's Chicken-fried Recipes</h1>
+    <img src="images/chicken-chef.png">
     <ul>
         <li><a href="recipes/chickenfried-steak.html">Chicken-fried Steak</a></li>
     </ul>
