--- a/recipes/chickenfried-steak.html
+++ b/recipes/chickenfried-steak.html
@@ -6,6 +6,25 @@
     </head>
     <body>
         <h1>Chicken-fried Steak</h1>
+        <nav><a href="../index.html">Homepage</a></nav>
         <img src="images/chicken-fried-steak.jpg">
+        <h2>Description</h2>
+        <p>This delectable dish consists of steak, mashed potatoes, and broccoli all hand prepared by a chicken.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Steak (any cut)</li>
+            <li>Potatoes</li>
+            <li>Broccoli</li>
+            <li>Butter</li>
+            <li>Gravy (white or brown)</li>
+            <li>1 Chicken (live)</li>
+        </ul>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Place steaks between 2 layers of plastic and pound to a thickness of 1/4 inch.</li>
+            <li>Place 2 cups of flower in a shallow bowl.</li>
+            <li>Stir together baking powder...</li>
+            <li>Heat shortening in a deep cast-iron skillet to...</li>
+        </ol>
     </body>
 </html>
