Add pages directory in recpes directory and updated links

--- a/recipes/pages/chickenfried-steak.html
+++ b/recipes/pages/chickenfried-steak.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Chicken-fried Steak</h1>
-        <nav><a href="../index.html">Homepage</a></nav>
-        <img src="images/chicken-fried-steak.jpg">
+        <nav><a href="../../index.html">Homepage</a></nav>
+        <img src="../images/chicken-fried-steak.jpg">
         <h2>Description</h2>
         <p>This delectable dish consists of steak, mashed potatoes, and broccoli all hand prepared by a chicken.</p>
         <h2>Ingredients</h2>
