--- a/recipes/pages/chickenfried-rice.html
+++ b/recipes/pages/chickenfried-rice.html
@@ -6,5 +6,28 @@
     </head>
     <body>
         <h1>Chicken-fried Rice</h1>
+        <nav><a href="../../index.html">Homepage</a></nav>
+        <img src="../images/chickenfried-rice.jpg">
+        <h2>Description</h2>
+        <p>This classic meal consists of fried rice with veggies and chicken.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 Chicken (live, with questionable morals)</li>
+            <li>1 lb. chopped chicken breasts</li>
+            <li>Rice</li>
+            <li>Eggs</li>
+            <li>Butter</li>
+            <li>Veggies</li>
+        </ul>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Place rice, chicken stock, and water in a medium saucepan; bring to a boil. Reduce heat to low, cover, and simmer until tender and liquid has been absorbed, 15 to 20 minutes.</li>
+            <li>Remove from heat, stir in 2 tablespoons of butter, and let cool to room temperature, about 30 minutes</li>
+            <li>Heat vegetable oil in a skillet over medium heat. Add eggs and scramble, stirring often to chop chunks of egg into small pieces with spatula</li>
+            <li>Place rice in a large mixing bowl, add eggs, and toss together</li>
+            <li>Melt remaining 2 tablespoons of butter...</li>
+            <li>Taste and add more butter or soy sauce as desired</li>
+            <li>Serve</li>
+        </ol>
     </body>
 </html>
