--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="images/chicken-chef.png">
     <ul>
         <li><a href="recipes/pages/chickenfried-steak.html">Chicken-fried Steak</a></li>
-    </ul>
+        <li><a href="recipes/pages/chickenfried-rice.html">Chicken-fried Rice</a></li>
+        <li><a href="recipes/pages/chickenfried-oreo.html">Chicken-fried Oreo</a></li>
 </body>
 </html>
