Add content to chickenfried-oreo page     Link to Homepage     Chicken fried oreo images     Description     Ingredients list     Instructions

--- a/recipes/pages/chickenfried-oreo.html
+++ b/recipes/pages/chickenfried-oreo.html
@@ -6,5 +6,17 @@
     </head>
     <body>
         <h1>Chicken-fried Oreo</h1>
+        <nav><a href="../../index.html">Homepage</a></nav>
+        <img src="../images/chicken-fried-oreo.jpg">
+        <h2>Description</h2>
+        <p>This irresistable treat not only tastes delicious but making them is also a fun activity for the whole family!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Oreos (or other cream-filled sandwich cookies)</li>
+            <li>Pancake mix</li>
+            <li>Vegetable oil</li>
+            <li>Milk</li>
+            <li>Eggs</li>
+        </ul>
     </body>
 </html>
