Update filenames, titles, headings, etc to 'Chicken Fried'     Changed chicken fried to two words instead of one or hyphenated

--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -2,10 +2,10 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title>Chicken-fried Oreo Recipe</title>
+        <title>Chicken Fried Oreo Recipe</title>
     </head>
     <body>
-        <h1>Chicken-fried Oreo</h1>
+        <h1>Chicken Fried Oreo</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-oreo.jpg">
         <h2>Description</h2>
@@ -18,5 +18,13 @@
             <li>Milk</li>
             <li>Eggs</li>
         </ul>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Heat oil in deep-fryer to 375 degrees Farenheit (190 Celsius)</li>
+            <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth.</li>
+            <li>Stir in the pancake mix until no dry lumps remain.</li>
+            <li>Dip the cookies into the batter one at a time and carefully place into the hot frying oil.</li>
+            <li>  </li>
+        </ol>
     </body>
 </html>
