--- a/recipes/pages/chicken-fried-rice.html
+++ b/recipes/pages/chicken-fried-rice.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title>Chicken-fried Rice Recipe</title>
+        <title>Chicken Fried Rice Recipe</title>
     </head>
     <body>
-        <h1>Chicken-fried Rice</h1>
+        <h1>Chicken Fried Rice</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chickenfried-rice.jpg">
+        <img src="../images/chicken-fried-rice.jpg">
         <h2>Description</h2>
         <p>This classic meal consists of fried rice with veggies and chicken.</p>
         <h2>Ingredients</h2>
