--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -2,10 +2,10 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title>Chicken-fried Steak Recipe</title>
+        <title>Chicken Fried Steak Recipe</title>
     </head>
     <body>
-        <h1>Chicken-fried Steak</h1>
+        <h1>Chicken Fried Steak</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-steak.jpg">
         <h2>Description</h2>
