--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin's Chicken-fried Recipes</h1>
-    <img src="images/chicken-chef.png">
+    <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="40%"> 
     <ul>
         <li><a href="recipes/pages/chicken-fried-steak.html">Chicken-fried Steak</a></li>
         <li><a href="recipes/pages/chicken-fried-rice.html">Chicken-fried Rice</a></li>
