Add back-to-top link on recipe pages

--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -5,7 +5,7 @@
         <title>Chicken Fried Oreo Recipe</title>
     </head>
     <body>
-        <h1>Chicken Fried Oreo</h1>
+        <a id="top"><h1>Chicken Fried Oreo</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-oreo.jpg">
         <h2>Description</h2>
@@ -26,5 +26,6 @@
             <li>Dip the cookies into the batter one at a time and carefully place into the hot frying oil.</li>
             <li>  </li>
         </ol>
+        <a href="#top">Back to top</a>
     </body>
 </html>
