--- a/recipes/pages/chicken-fried-rice.html
+++ b/recipes/pages/chicken-fried-rice.html
@@ -5,7 +5,7 @@
         <title>Chicken Fried Rice Recipe</title>
     </head>
     <body>
-        <h1>Chicken Fried Rice</h1>
+        <a id="top"><h1>Chicken Fried Rice</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-rice.jpg">
         <h2>Description</h2>
@@ -29,5 +29,6 @@
             <li>Taste and add more butter or soy sauce as desired</li>
             <li>Serve</li>
         </ol>
+        <a href="#top">Back to top</a>
     </body>
 </html>
