--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -5,7 +5,7 @@
         <title>Chicken Fried Steak Recipe</title>
     </head>
     <body>
-        <h1>Chicken Fried Steak</h1>
+        <a id="top"><h1>Chicken Fried Steak</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-steak.jpg">
         <h2>Description</h2>
@@ -26,5 +26,6 @@
             <li>Stir together baking powder...</li>
             <li>Heat shortening in a deep cast-iron skillet to...</li>
         </ol>
+        <a href="#top">Back to top</a>
     </body>
 </html>
