Update chicken fried oreo page image
    Added an alt description
    Reduced width of image

--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -7,7 +7,7 @@
     <body>
         <a id="top"><h1>Chicken Fried Oreo</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chicken-fried-oreo.jpg">
+        <img src="../images/chicken-fried-oreo.jpg" alt="Powdered sugar coated fried oroes" width="30%">
         <h2>Description</h2>
         <p>This irresistable treat not only tastes delicious but making them is also a fun activity for the whole family!</p>
         <h2>Ingredients</h2>
