Update chicken fried rice page image     Added alt text     Added width attribute

--- a/recipes/pages/chicken-fried-rice.html
+++ b/recipes/pages/chicken-fried-rice.html
@@ -7,7 +7,7 @@
     <body>
         <a id="top"><h1>Chicken Fried Rice</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chicken-fried-rice.jpg">
+        <img src="../images/chicken-fried-rice.jpg" alt="A bowl filled with chicken fried rice" width="auto">
         <h2>Description</h2>
         <p>This classic meal consists of fried rice with veggies and chicken.</p>
         <h2>Ingredients</h2>
