Update chicken fried steak page image     Added alt text     Reduced image width

--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -7,7 +7,7 @@
     <body>
         <a id="top"><h1>Chicken Fried Steak</h1></a>
         <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chicken-fried-steak.jpg">
+        <img src="../images/chicken-fried-steak.jpg" alt="Chicken fried steak, broccoli, and mashed potatoes on a white plate" width="30%">
         <h2>Description</h2>
         <p>This delectable dish consists of steak, mashed potatoes, and broccoli all hand prepared by a chicken.</p>
         <h2>Ingredients</h2>
