--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin's Chicken-fried Recipes Homepage</title>
+    <title>Odin's Chicken Fried Recipes Homepage</title>
 </head>
 <body>
-    <h1>Odin's Chicken-fried Recipes</h1>
+    <h1>Odin's Chicken Fried Recipes</h1>
     <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="40%"> 
     <ul>
-        <li><a href="recipes/pages/chicken-fried-steak.html">Chicken-fried Steak</a></li>
-        <li><a href="recipes/pages/chicken-fried-rice.html">Chicken-fried Rice</a></li>
-        <li><a href="recipes/pages/chicken-fried-oreo.html">Chicken-fried Oreo</a></li>
+        <li><a href="recipes/pages/chicken-fried-steak.html">Chicken Fried Steak</a></li>
+        <li><a href="recipes/pages/chicken-fried-rice.html">Chicken Fried Rice</a></li>
+        <li><a href="recipes/pages/chicken-fried-oreo.html">Chicken Fried Oreo</a></li>
 </body>
 </html>
