Finish instructions on chicken fried oreo page

--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -24,7 +24,8 @@
             <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth.</li>
             <li>Stir in the pancake mix until no dry lumps remain.</li>
             <li>Dip the cookies into the batter one at a time and carefully place into the hot frying oil.</li>
-            <li>  </li>
+            <li>Cook until golden-brown (about 2 minutes)</li>
+            <li>Drain on paper towel-lined plate before serving</li>
         </ol>
         <a href="#top">Back to top</a>
     </body>
