Add stylesheet link to recipe pages

--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chicken Fried Steak Recipe</title>
+        <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
         <a id="top"><h1>Chicken Fried Steak</h1></a>
