--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Chicken Fried Oreo Recipe</title>
+        <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
         <a id="top"><h1>Chicken Fried Oreo</h1></a>
