Un-nest heading from anchor element     Purpose is to style links without style being applied to headings

--- a/recipes/pages/chicken-fried-rice.html
+++ b/recipes/pages/chicken-fried-rice.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
-        <a id="top"><h1>Chicken Fried Rice</h1></a>
+        <a id="top"></a>
+        <h1>Chicken Fried Rice</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-rice.jpg" alt="A bowl filled with chicken fried rice" width="auto">
         <h2>Description</h2>
