--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
-        <a id="top"><h1>Chicken Fried Steak</h1></a>
+        <a id="top"></a>
+        <h1>Chicken Fried Steak</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
         <img src="../images/chicken-fried-steak.jpg" alt="Chicken fried steak, broccoli, and mashed potatoes on a white plate" width="30%">
         <h2>Description</h2>
