Update index page layout and styles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Odin's Chicken Fried Recipes</h1>
-    <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="40%"> 
-    <ul>
-        <li><a href="recipes/pages/chicken-fried-steak.html">Chicken Fried Steak</a></li>
-        <li><a href="recipes/pages/chicken-fried-rice.html">Chicken Fried Rice</a></li>
-        <li><a href="recipes/pages/chicken-fried-oreo.html">Chicken Fried Oreo</a></li>
-    </ul>
+    <header id="homepage-header">
+        <h1>Odin's Chicken Fried Recipes</h1>
+    </header>
+    <main id="homepage-main">
+        <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="40%"> 
+        <ul class="recipe-list">
+            <li><a href="recipes/pages/chicken-fried-steak.html">Chicken Fried Steak</a></li>
+            <li><a href="recipes/pages/chicken-fried-rice.html">Chicken Fried Rice</a></li>
+            <li><a href="recipes/pages/chicken-fried-oreo.html">Chicken Fried Oreo</a></li>
+        </ul>
+    </main>
 </body>
 </html>
