Update chicken chef image width on index page     Added html width attribute for smoother page load experience     Also added css rule to set image size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Odin's Chicken Fried Recipes</h1>
     </header>
     <main id="homepage-main">
-        <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="40%"> 
+        <img src="images/chicken-chef.png" alt="Chicken chef holding a silver platter" width="700px"> 
         <ul class="recipe-list">
             <li><a href="recipes/pages/chicken-fried-steak.html">Chicken Fried Steak</a></li>
             <li><a href="recipes/pages/chicken-fried-rice.html">Chicken Fried Rice</a></li>
