Update Chicken Fried Steak image sizing     Smoother image loading

--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -10,7 +10,7 @@
         <h1>Chicken Fried Steak</h1>
         <nav><a href="../../index.html">Homepage</a></nav>
         <main class="recipe-content">
-            <img class="recipe-image" src="../images/chicken-fried-steak.jpg" alt="Chicken fried steak, broccoli, and mashed potatoes on a white plate" width="30%">
+            <img class="recipe-image" src="../images/chicken-fried-steak.jpg" alt="Chicken fried steak, broccoli, and mashed potatoes on a white plate" width="600px">
             <div class="recipe-info">
                 <div class="recipe-description">
                     <h2>Description</h2>
