Update Chicken Fried Steak page header content and styleing

--- a/recipes/pages/chicken-fried-steak.html
+++ b/recipes/pages/chicken-fried-steak.html
@@ -6,9 +6,15 @@
         <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
-        <a id="top"></a>
-        <h1>Chicken Fried Steak</h1>
-        <nav><a href="../../index.html">Homepage</a></nav>
+        <header class="recipe-header">
+            <a id="top"></a>
+            <h1>Chicken Fried Steak</h1>
+            <nav>
+                <a href="../../index.html">
+                    <img src="../../images/chicken-chef.png" alt="chicken chef carrying silver platter" width="100px">
+                </a>
+            </nav>
+        </header>
         <main class="recipe-content">
             <img class="recipe-image" src="../images/chicken-fried-steak.jpg" alt="Chicken fried steak, broccoli, and mashed potatoes on a white plate" width="600px">
             <div class="recipe-info">
