Update Chicken Fried Rice page     Make styling consistent with other recipe pages

--- a/recipes/pages/chicken-fried-rice.html
+++ b/recipes/pages/chicken-fried-rice.html
@@ -6,31 +6,44 @@
         <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
-        <a id="top"></a>
-        <h1>Chicken Fried Rice</h1>
-        <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chicken-fried-rice.jpg" alt="A bowl filled with chicken fried rice" width="auto">
-        <h2>Description</h2>
-        <p>This classic meal consists of fried rice with veggies and chicken.</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>1 Chicken (live, with questionable morals)</li>
-            <li>1 lb. chopped chicken breasts</li>
-            <li>Rice</li>
-            <li>Eggs</li>
-            <li>Butter</li>
-            <li>Veggies</li>
-        </ul>
-        <h2>Instructions</h2>
-        <ol>
-            <li>Place rice, chicken stock, and water in a medium saucepan; bring to a boil. Reduce heat to low, cover, and simmer until tender and liquid has been absorbed, 15 to 20 minutes.</li>
-            <li>Remove from heat, stir in 2 tablespoons of butter, and let cool to room temperature, about 30 minutes</li>
-            <li>Heat vegetable oil in a skillet over medium heat. Add eggs and scramble, stirring often to chop chunks of egg into small pieces with spatula</li>
-            <li>Place rice in a large mixing bowl, add eggs, and toss together</li>
-            <li>Melt remaining 2 tablespoons of butter...</li>
-            <li>Taste and add more butter or soy sauce as desired</li>
-            <li>Serve</li>
-        </ol>
-        <a href="#top">Back to top</a>
+        <header class="recipe-header">
+            <a id="top"></a>
+            <h1>Chicken Fried Rice</h1>
+            <nav>
+                <a href="../../index.html"><img src="../../images/chicken-chef.png" alt="chicken chef carrying silver platter" width="100px"></a>
+            </nav>
+        </header>
+        <main class="recipe-content">
+            <img class="recipe-image" src="../images/chicken-fried-rice.jpg" alt="A bowl filled with chicken fried rice" width="600px">
+            <div class="recipe-info">
+                <div class="recipe-description">
+                    <h2>Description</h2>
+                    <p>This classic meal consists of fried rice with veggies and chicken.</p>
+                </div>
+                <div class="recipe-ingredients">
+                    <h2>Ingredients</h2>
+                    <ul>
+                        <li>1 Chicken (live, with questionable morals)</li>
+                        <li>1 lb. chopped chicken breasts</li>
+                        <li>Rice</li>
+                        <li>Eggs</li>
+                        <li>Butter</li>
+                        <li>Veggies</li>
+                    </ul>
+                </div>
+                <div class="recipe-instructions">
+                    <h2>Instructions</h2>
+                    <ol>
+                        <li>Place rice, chicken stock, and water in a medium saucepan; bring to a boil. Reduce heat to low, cover, and simmer until tender and liquid has been absorbed, 15 to 20 minutes.</li>
+                        <li>Remove from heat, stir in 2 tablespoons of butter, and let cool to room temperature, about 30 minutes</li>
+                        <li>Heat vegetable oil in a skillet over medium heat. Add eggs and scramble, stirring often to chop chunks of egg into small pieces with spatula</li>
+                        <li>Place rice in a large mixing bowl, add eggs, and toss together</li>
+                        <li>Melt remaining 2 tablespoons of butter...</li>
+                        <li>Taste and add more butter or soy sauce as desired</li>
+                        <li>Serve</li>
+                    </ol>        
+                </div>
+            </div>
+        </main>
     </body>
 </html>
