Update Chicken Fried Oreo page     Make style consistent with other recipe pages

--- a/recipes/pages/chicken-fried-oreo.html
+++ b/recipes/pages/chicken-fried-oreo.html
@@ -6,29 +6,42 @@
         <link rel="stylesheet" href="../../styles/style.css">
     </head>
     <body>
-        <a id="top"></a>
-        <h1>Chicken Fried Oreo</h1>
-        <nav><a href="../../index.html">Homepage</a></nav>
-        <img src="../images/chicken-fried-oreo.jpg" alt="Powdered sugar coated fried oroes" width="30%">
-        <h2>Description</h2>
-        <p>This irresistable treat not only tastes delicious but making them is also a fun activity for the whole family!</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Oreos (or other cream-filled sandwich cookies)</li>
-            <li>Pancake mix</li>
-            <li>Vegetable oil</li>
-            <li>Milk</li>
-            <li>Eggs</li>
-        </ul>
-        <h2>Instructions</h2>
-        <ol>
-            <li>Heat oil in deep-fryer to 375 degrees Farenheit (190 Celsius)</li>
-            <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth.</li>
-            <li>Stir in the pancake mix until no dry lumps remain.</li>
-            <li>Dip the cookies into the batter one at a time and carefully place into the hot frying oil.</li>
-            <li>Cook until golden-brown (about 2 minutes)</li>
-            <li>Drain on paper towel-lined plate before serving</li>
-        </ol>
-        <a href="#top">Back to top</a>
+        <header class="recipe-header">
+            <a id="top"></a>
+            <h1>Chicken Fried Oreo</h1>
+            <nav>
+                <a href="../../index.html"><img src="../../images/chicken-chef.png" alt="chicken chef carrying silver platter" width="100px"></a>
+            </nav>
+        </header>
+        <main class="recipe-content">
+            <img class="recipe-image" src="../images/chicken-fried-oreo.jpg" alt="Powdered sugar coated fried oroes" width=600px>
+            <div class="recipe-info">
+                <div class="recipe-description">
+                    <h2>Description</h2>
+                    <p>This irresistable treat not only tastes delicious but making them is also a fun activity for the whole family!</p>
+                </div>
+                <div class="recipe-ingredients">
+                    <h2>Ingredients</h2>
+                    <ul>
+                        <li>Oreos (or other cream-filled sandwich cookies)</li>
+                        <li>Pancake mix</li>
+                        <li>Vegetable oil</li>
+                        <li>Milk</li>
+                        <li>Eggs</li>
+                    </ul>
+                </div>
+                <div class="recipe-instructions">
+                    <h2>Instructions</h2>
+                    <ol>
+                        <li>Heat oil in deep-fryer to 375 degrees Farenheit (190 Celsius)</li>
+                        <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth.</li>
+                        <li>Stir in the pancake mix until no dry lumps remain.</li>
+                        <li>Dip the cookies into the batter one at a time and carefully place into the hot frying oil.</li>
+                        <li>Cook until golden-brown (about 2 minutes)</li>
+                        <li>Drain on paper towel-lined plate before serving</li>
+                    </ol>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
